mfr images expo

--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
         <div class="container">
             <!-- Portfolio Section Heading-->
             <h2 class="page-section-heading  text-uppercase text-secondary mb-0">STAGE DE <span
-                    class="text-primary">1ère</span> année</h2>
+                    class="text-mfr">1ère</span> année</h2>
             <hr>
             <ul class="timeline">
                 <li>
@@ -566,7 +566,8 @@
                                     href="https://www.convertcsv.com/csv-to-sql.html">https://www.convertcsv.com/csv-to-sql.html</a>.
                             </p>
                             <div class="gap-2 justify-content-md-start mt-3">
-                                <button type="button" class="btn btn-outline-secondary btn-lg px-4 mt-1"><i
+                                <button data-bs-toggle="modal" data-bs-target="#portfolioModal6"
+                                    class="btn btn-outline-secondary btn-lg px-4 mt-1"><i
                                         class="fa-solid fa-file-export me-2"></i> Captures d'écran</button>
                             </div>
                         </div>
@@ -585,10 +586,12 @@
                             <p>Configuration d'un serveur Web APACHE, accessible sur le serveur de la MFR afin de rendre
                                 l'application disponible à tous.</p>
                             <div class="gap-2 justify-content-md-start mt-3">
+                                <a href="https://sefacile.alwaysdata.net/MFR_BDD/index.php" target="_blank"> <button
+                                        type="button" class="btn btn-outline-secondary btn-lg px-4 mt-1"><i
+                                            class="fa-solid fa-laptop-code me-2"></i> Démo</button></a>
+                                <!-- 
                                 <button type="button" class="btn btn-outline-secondary btn-lg px-4 mt-1"><i
-                                        class="fa-solid fa-laptop-code me-2"></i> Démo</button>
-                                <button type="button" class="btn btn-outline-secondary btn-lg px-4 mt-1"><i
-                                        class="fa-solid fa-code-fork me-2"></i> Code source</button>
+                                        class="fa-solid fa-code-fork me-2"></i> Code source</button> -->
                             </div>
                         </div>
                     </div>
@@ -615,8 +618,10 @@
 
                             </p>
                             <div class="gap-2 justify-content-md-start mt-3">
-                                <button type="button" class="btn btn-outline-secondary btn-lg px-4 mt-1"><i
-                                        class="fa-solid fa-book me-2"></i> Guide d'utilisation</button>
+                                <a href="https://sefacile.alwaysdata.net/MFR_BDD/guide.php" target="_blank"> <button
+                                        type="button" class="btn btn-outline-secondary btn-lg px-4 mt-1"><i
+                                            class="fa-solid fa-book me-2"></i> Guide d'utilisation</button></a>
+
                             </div>
                         </div>
                     </div>
@@ -697,7 +702,7 @@
         <div class="container">
             <!-- Portfolio Section Heading-->
             <h2 class="page-section-heading  text-uppercase text-secondary mb-0">STAGE DE <span
-                    class="text-primary">2ème</span> année</h2>
+                    class="text-timc">2ème</span> année</h2>
             <hr>
             <ul class="timeline">
                 <li>
@@ -802,7 +807,8 @@
                             <span class="badge bg-cpp">C++</span>
                             </p>
                             <div class="gap-2 justify-content-md-start mt-3">
-                                <button data-bs-toggle="modal" data-bs-target="#portfolioModal5" class="btn btn-outline-secondary btn-lg px-4 mt-1"><i
+                                <button data-bs-toggle="modal" data-bs-target="#portfolioModal5"
+                                    class="btn btn-outline-secondary btn-lg px-4 mt-1"><i
                                         class="fa-solid fa-code me-2"></i> Captures d'écran</button>
                             </div>
                         </div>
@@ -1126,7 +1132,7 @@
                                     <img src="assets/img/stages/timc/interact0.png" class="card-img-top">
                                     <div class="card-body text-start">
                                         <h5 class="card-title">Étape 1</h5>
-                                        <p class="card-text">Lancement de l'interface à partir du logiciel</p>
+                                        <p class="card-text">Lancement de l'interface à partir du logiciel.</p>
                                     </div>
                                 </div>
                             </div>
@@ -1136,7 +1142,7 @@
                                     <img src="assets/img/stages/timc/interact1.png" class="card-img-top">
                                     <div class="card-body text-start">
                                         <h5 class="card-title">Étape 2</h5>
-                                        <p class="card-text">Génération des paramètres à partir de l'interface</p>
+                                        <p class="card-text">Génération des paramètres à partir de l'interface.</p>
                                     </div>
                                 </div>
                             </div>
@@ -1147,7 +1153,7 @@
                                     <img src="assets/img/stages/timc/interact2.png" class="card-img-top">
                                     <div class="card-body text-start">
                                         <h5 class="card-title">Étape 3</h5>
-                                        <p class="card-text">Extraction des paramètres</p>
+                                        <p class="card-text">Extraction des paramètres.</p>
                                     </div>
                                 </div>
                             </div>
@@ -1156,7 +1162,7 @@
                                     <img src="assets/img/stages/timc/interact3.png" class="card-img-top">
                                     <div class="card-body text-start">
                                         <h5 class="card-title">Étape 4</h5>
-                                        <p class="card-text">Visualisation graphique de la simulation</p>
+                                        <p class="card-text">Visualisation graphique de la simulation.</p>
                                     </div>
                                 </div>
                             </div>
@@ -1193,7 +1199,7 @@
                                         <h5 class="card-title">Étape 1</h5>
                                         <p class="card-text">Lancement de l'interface à partir du logiciel, en indiquant
                                             le seuil avec la possibilité de générer à partir d'une simulation enregistré
-                                            ou la dernière simulation ainsi que de sauvegarder la dernière simulation
+                                            ou la dernière simulation ainsi que de sauvegarder la dernière simulation.
                                         </p>
                                     </div>
                                 </div>
@@ -1204,7 +1210,7 @@
                                     <img src="assets/img/stages/timc/plotly1.png" class="card-img-top">
                                     <div class="card-body text-start">
                                         <h5 class="card-title">Étape 2</h5>
-                                        <p class="card-text">Génération du graphique</p>
+                                        <p class="card-text">Génération du graphique.</p>
                                     </div>
                                 </div>
                             </div>
@@ -1215,7 +1221,7 @@
                                     <img src="assets/img/stages/timc/interact3.png" class="card-img-top">
                                     <div class="card-body text-start">
                                         <h5 class="card-title">Étape 3</h5>
-                                        <p class="card-text">Visualisation graphique de la simulation</p>
+                                        <p class="card-text">Visualisation graphique de la simulation.</p>
                                     </div>
                                 </div>
                             </div>
@@ -1224,7 +1230,7 @@
                                     <img src="assets/img/stages/timc/plotly2.png" class="card-img-top">
                                     <div class="card-body text-start">
                                         <h5 class="card-title">Étape 4</h5>
-                                        <p class="card-text">Sauvegarde des logs ainsi que du fichier .html du graphique
+                                        <p class="card-text">Sauvegarde des logs ainsi que du fichier .html du graphique.
                                         </p>
                                     </div>
                                 </div>
@@ -1260,7 +1266,8 @@
                                     <img src="assets/img/stages/timc/logiciel0.png" class="card-img-top">
                                     <div class="card-body text-start">
                                         <h5 class="card-title">Étape 1</h5>
-                                        <p class="card-text">Développement du logiciel ainsi que du formulaire des paramètres permettant de lancer la simulation
+                                        <p class="card-text">Développement du logiciel ainsi que du formulaire des
+                                            paramètres permettant de lancer la simulation.
                                         </p>
                                     </div>
                                 </div>
@@ -1271,7 +1278,8 @@
                                     <img src="assets/img/stages/timc/logiciel1.png" class="card-img-top">
                                     <div class="card-body text-start">
                                         <h5 class="card-title">Étape 2</h5>
-                                        <p class="card-text">Exctraction des paramètres dans un fichier .txt afin d'être interprété par la simulation (de façon automatique)</p>
+                                        <p class="card-text">Exctraction des paramètres dans un fichier .txt afin d'être
+                                            interprété par la simulation (de façon automatique).</p>
                                     </div>
                                 </div>
                             </div>
@@ -1282,7 +1290,89 @@
                                     <img src="assets/img/stages/timc/logiciel2.png" class="card-img-top">
                                     <div class="card-body text-start">
                                         <h5 class="card-title">Étape 3</h5>
-                                        <p class="card-text">Lancement de la simulation à partir du logiciel</p>
+                                        <p class="card-text">Lancement de la simulation à partir du logiciel.</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- MFR CAP EXPORT-->
+        <div class="portfolio-modal modal fade" id="portfolioModal6" tabindex="-1" aria-labelledby="portfolioModal6"
+            aria-hidden="true">
+            <div class="modal-dialog modal-xl">
+                <div class="modal-content">
+                    <div class="modal-body border-0">
+                        <div class="row">
+                            <div class="col-11">
+                                <h3 class="text-uppercase text-secondary float-start"><span class="text-mfr">MFR :
+                                    </span>Importation de la base de données
+                                    </h5>
+                            </div>
+                            <div class="col-1">
+                                <button class="btn-close float-end" type="button" data-bs-dismiss="modal"
+                                    aria-label="Close"></button>
+                            </div>
+                        </div>
+                        <hr>
+                    </div>
+
+                    <div class="modal-body text-center lebodydemonmodal">
+                        <div class="row justify-content-center">
+                            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6">
+                                <div class="card rounded-0">
+                                    <img src="assets/img/stages/mfr/export0.png" class="card-img-top">
+                                    <div class="card-body text-start">
+                                        <h5 class="card-title">Étape 1</h5>
+                                        <p class="card-text">Pour la base de données IMFR, il n’est possible que
+                                            d’exporter année en année (exemple : 2010-11, 2011-12 etc.), j’ai donc dû
+                                            exporter 10 différents fichiers que j’ai ensuite combiné à l’aide de <a
+                                                href="http://merge-csv.com/">http://merge-csv.com/</a>. Que j’ai ensuite
+                                            converti en UTF-8.
+                                        </p>
+                                        <p class="card-text">Sans filtrage, le fichier contient <b>10824</b> lignes.
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6 mt-4 mt-lg-0">
+                                <div class="card rounded-0">
+                                    <img src="assets/img/stages/mfr/export2.png" class="card-img-top">
+                                    <div class="card-body text-start">
+                                        <h5 class="card-title">Étape 2</h5>
+                                        <p class="card-text">Je supprime tous les doublons : il reste <b>1173</b>
+                                            valeurs uniques.
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row justify-content-center mt-4">
+                            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6">
+                                <div class="card rounded-0">
+                                    <img src="assets/img/stages/mfr/export3.png" class="card-img-top">
+                                    <div class="card-body text-start">
+                                        <h5 class="card-title">Étape 3</h5>
+                                        <p class="card-text">Comme on peut le voir, lors de l’exportation les formations
+                                            sont nommées sous leurs libellés, or, avec ma structure de la BDD, afin de
+                                            correctement stocker les formations, j’ai besoin de convertir ces libellés
+                                            en id.</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6 mt-4 mt-lg-0">
+                                <div class="card rounded-0">
+                                    <img src="assets/img/stages/mfr/export4.png" class="card-img-top">
+                                    <div class="card-body text-start">
+                                        <h5 class="card-title">Étape 4</h5>
+                                        <p class="card-text">Avec des données qui sont maintenant prêtes à être
+                                            exportées, il suffit de les convertir en requêtes SQL, ce que j’ai fait ici
+                                            avec l’outil <a href="https://www.convertcsv.com/csv-to-sql.html">https://www.convertcsv.com/csv-to-sql.html</a>.
+                                        </p>
                                     </div>
                                 </div>
                             </div>
