--- a/index.html
+++ b/index.html
@@ -469,7 +469,8 @@
                                 Pour accomplir cette tâche, madame MARTIN m’a rédigée un cahier des charges qui
                                 définit précisément ses besoins, ses exigences et ses contraintes.</p>
                             <div class="gap-2 justify-content-md-start mt-3">
-                                <button type="button" class="btn btn-outline-secondary btn-lg px-4"><i
+                                <button data-bs-toggle="modal" data-bs-target="#portfolioModal11"
+                                    class="btn btn-outline-secondary btn-lg px-4"><i
                                         class="fa-solid fa-file me-2 mt-1"></i> Cahier des charges</button>
                             </div>
                         </div>
@@ -509,11 +510,14 @@
                             <p>Par ailleurs, j'ai également effectué une modélisation MLD de la base de données et de
                                 l'arborescence de l'application web.</p>
                             <div class="gap-2 justify-content-md-start mt-3">
-                                <button type="button" class="btn btn-outline-secondary btn-lg px-4 mt-1"><i
+                                <button data-bs-toggle="modal" data-bs-target="#portfolioModal8"
+                                    class="btn btn-outline-secondary btn-lg px-4 mt-1"><i
                                         class="fa-solid fa-chart-gantt me-2"></i> Gantt</button>
-                                <button type="button" class="btn btn-outline-secondary btn-lg px-4 mt-1"><i
+                                <button data-bs-toggle="modal" data-bs-target="#portfolioModal9"
+                                    class="btn btn-outline-secondary btn-lg px-4 mt-1"><i
                                         class="fa-solid fa-database me-2"></i> MLD</button>
-                                <button type="button" class="btn btn-outline-secondary btn-lg px-4 mt-1"><i
+                                <button data-bs-toggle="modal" data-bs-target="#portfolioModal10"
+                                    class="btn btn-outline-secondary btn-lg px-4 mt-1"><i
                                         class="fa-solid fa-folder-tree me-2"></i> Arboresence</button>
                             </div>
                         </div>
@@ -540,7 +544,8 @@
                                 <span class="badge bg-bootstrap">Bootstrap</span>
                             </p>
                             <div class="gap-2 justify-content-md-start mt-3">
-                                <button type="button" class="btn btn-outline-secondary btn-lg px-4 mt-1"><i
+                                <button data-bs-toggle="modal" data-bs-target="#portfolioModal7"
+                                    class="btn btn-outline-secondary btn-lg px-4 mt-1"><i
                                         class="fa-solid fa-code me-2"></i> Captures d'écran</button>
                             </div>
                         </div>
@@ -1230,7 +1235,8 @@
                                     <img src="assets/img/stages/timc/plotly2.png" class="card-img-top">
                                     <div class="card-body text-start">
                                         <h5 class="card-title">Étape 4</h5>
-                                        <p class="card-text">Sauvegarde des logs ainsi que du fichier .html du graphique.
+                                        <p class="card-text">Sauvegarde des logs ainsi que du fichier .html du
+                                            graphique.
                                         </p>
                                     </div>
                                 </div>
@@ -1371,7 +1377,8 @@
                                         <h5 class="card-title">Étape 4</h5>
                                         <p class="card-text">Avec des données qui sont maintenant prêtes à être
                                             exportées, il suffit de les convertir en requêtes SQL, ce que j’ai fait ici
-                                            avec l’outil <a href="https://www.convertcsv.com/csv-to-sql.html">https://www.convertcsv.com/csv-to-sql.html</a>.
+                                            avec l’outil <a
+                                                href="https://www.convertcsv.com/csv-to-sql.html">https://www.convertcsv.com/csv-to-sql.html</a>.
                                         </p>
                                     </div>
                                 </div>
@@ -1381,16 +1388,250 @@
                 </div>
             </div>
         </div>
-    </div>
 
+        <!-- MFR CAP DEV-->
+        <div class="portfolio-modal modal fade" id="portfolioModal7" tabindex="-1" aria-labelledby="portfolioModal7"
+            aria-hidden="true">
+            <div class="modal-dialog modal-xl">
+                <div class="modal-content">
+                    <div class="modal-body border-0">
+                        <div class="row">
+                            <div class="col-11">
+                                <h3 class="text-uppercase text-secondary float-start"><span class="text-mfr">MFR :
+                                    </span>développement de l'application web
+                                    </h5>
+                            </div>
+                            <div class="col-1">
+                                <button class="btn-close float-end" type="button" data-bs-dismiss="modal"
+                                    aria-label="Close"></button>
+                            </div>
+                        </div>
+                        <hr>
+                    </div>
 
-    <!-- ################## SCRIPT ###################### -->
-    <!-- Font Awesome icons (free version)-->
-    <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" defer></script>
-    <!-- Bootstrap core JS-->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" defer></script>
-    <!-- Core theme JS-->
-    <script src="assets/js/script.js" defer></script>
+                    <div class="modal-body text-center lebodydemonmodal">
+                        <div class="row justify-content-center">
+                            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6">
+                                <div class="card rounded-0">
+                                    <img src="assets/img/stages/mfr/dev0.png" class="card-img-top">
+                                    <div class="card-body text-start">
+                                        <h5 class="card-title">Étape 1</h5>
+                                        <p class="card-text">Création de la base de données.
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6 mt-4 mt-lg-0">
+                                <div class="card rounded-0">
+                                    <img src="assets/img/stages/mfr/dev1.png" class="card-img-top">
+                                    <div class="card-body text-start">
+                                        <h5 class="card-title">Étape 2</h5>
+                                        <p class="card-text">Développement back-end de l'application.
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row justify-content-center mt-4">
+                            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6">
+                                <div class="card rounded-0">
+                                    <img src="assets/img/stages/mfr/dev2.png" class="card-img-top">
+                                    <div class="card-body text-start">
+                                        <h5 class="card-title">Étape 3</h5>
+                                        <p class="card-text">Développement front-end de l'application.</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6 mt-4 mt-lg-0">
+                                <div class="card rounded-0">
+                                    <img src="assets/img/stages/mfr/dev3.png" class="card-img-top">
+                                    <div class="card-body text-start">
+                                        <h5 class="card-title">Étape 4</h5>
+                                        <p class="card-text">Développement d'une visualisation graphique.
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- MFR CAP GANT-->
+        <div class="portfolio-modal modal fade" id="portfolioModal8" tabindex="-1" aria-labelledby="portfolioModal8"
+            aria-hidden="true">
+            <div class="modal-dialog modal-xl">
+                <div class="modal-content">
+                    <div class="modal-body border-0">
+                        <div class="row">
+                            <div class="col-11">
+                                <h3 class="text-uppercase text-secondary float-start"><span class="text-mfr">MFR :
+                                    </span>DIAGRAMME DE GANTT
+                                    </h5>
+                            </div>
+                            <div class="col-1">
+                                <button class="btn-close float-end" type="button" data-bs-dismiss="modal"
+                                    aria-label="Close"></button>
+                            </div>
+                        </div>
+                        <hr>
+                    </div>
+
+                    <div class="modal-body text-center lebodydemonmodal">
+                        <div class="row justify-content-center">
+                            <div class="col-12">
+                                <div class="card rounded-0">
+                                    <img src="assets/img/stages/mfr/gantt.png" class="card-img-top">
+                                    <div class="card-body text-start">
+                                        <h5 class="card-title">Gantt</h5>
+                                        <p class="card-text">Afin de m’organiser dans la conception de cet outil, j’ai
+                                            décidé de faire un diagramme de
+                                            Grantt afin de gérer et visualiser, dans le temps, les diverses tâches de ce
+                                            projet.
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- MFR CAP MLD-->
+        <div class="portfolio-modal modal fade" id="portfolioModal9" tabindex="-1" aria-labelledby="portfolioModal9"
+            aria-hidden="true">
+            <div class="modal-dialog modal-xl">
+                <div class="modal-content">
+                    <div class="modal-body border-0">
+                        <div class="row">
+                            <div class="col-11">
+                                <h3 class="text-uppercase text-secondary float-start"><span class="text-mfr">MFR :
+                                    </span>modèle logique des données
+                                    </h5>
+                            </div>
+                            <div class="col-1">
+                                <button class="btn-close float-end" type="button" data-bs-dismiss="modal"
+                                    aria-label="Close"></button>
+                            </div>
+                        </div>
+                        <hr>
+                    </div>
+
+                    <div class="modal-body text-center lebodydemonmodal">
+                        <div class="row justify-content-center">
+                            <div class="col-12">
+                                <div class="card rounded-0">
+                                    <img src="assets/img/stages/mfr/mld.png" class="card-img-top">
+                                    <div class="card-body text-start">
+                                        <h5 class="card-title">MLD</h5>
+                                        <p class="card-text">À l’aide de Microsoft Acces, j’ai premièrement décidé de
+                                            faire un premier schéma de la
+                                            base de données (qui n’est pas le schéma final).
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- MFR CAP ARB-->
+        <div class="portfolio-modal modal fade" id="portfolioModal10" tabindex="-1" aria-labelledby="portfolioModal10"
+            aria-hidden="true">
+            <div class="modal-dialog modal-xl">
+                <div class="modal-content">
+                    <div class="modal-body border-0">
+                        <div class="row">
+                            <div class="col-11">
+                                <h3 class="text-uppercase text-secondary float-start"><span class="text-mfr">MFR :
+                                    </span>arborescence
+                                    </h5>
+                            </div>
+                            <div class="col-1">
+                                <button class="btn-close float-end" type="button" data-bs-dismiss="modal"
+                                    aria-label="Close"></button>
+                            </div>
+                        </div>
+                        <hr>
+                    </div>
+
+                    <div class="modal-body text-center lebodydemonmodal">
+                        <div class="row justify-content-center">
+                            <div class="col-12">
+                                <div class="card rounded-0">
+                                    <img src="assets/img/stages/mfr/arb.png" class="card-img-top">
+                                    <div class="card-body text-start">
+                                        <h5 class="card-title">Arborescence</h5>
+                                        <p class="card-text">Cela me permet d’avoir une représentation de la structure
+                                            et de l'organisation de
+                                            l'information et des contenus du site.
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- MFR CDC-->
+        <div class="portfolio-modal modal fade" id="portfolioModal11" tabindex="-1" aria-labelledby="portfolioModal11"
+            aria-hidden="true">
+            <div class="modal-dialog modal-xl">
+                <div class="modal-content">
+                    <div class="modal-body border-0">
+                        <div class="row">
+                            <div class="col-11">
+                                <h3 class="text-uppercase text-secondary float-start"><span class="text-mfr">MFR :
+                                    </span>CAHIER DES CHARGES
+                                    </h5>
+                            </div>
+                            <div class="col-1">
+                                <button class="btn-close float-end" type="button" data-bs-dismiss="modal"
+                                    aria-label="Close"></button>
+                            </div>
+                        </div>
+                        <hr>
+                    </div>
+
+                    <div class="modal-body text-center lebodydemonmodal">
+                        <div class="row justify-content-center">
+                            <div class="col-12">
+                                <object data="assets/files/mfr/cdc.pdf" type="application/pdf" width="100%"
+                                    height="500px">
+                                    <h5>Votre navigateur ne prend pas en charge les fichiers PDF intégrés : <a
+                                            href="assets/files/mfr/cdc.pdf" target="_blank">CAHIER DES CHARGES</a></h5>
+                                </object>
+                                <p class="card-text text-start mt-1">J’ai accompli toutes les tâches listées sur le
+                                    cahier des charges.
+                                    <br><br>
+                                    En vert : les tâches traitées la 1ère semaine.
+                                    <br>
+                                    En jaune : les tâches traitées la 2ème et 3ème semaine.
+                                    <br>
+                                    En violet : les tâches traitées la 4ème semaine
+                                </p>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- ################## SCRIPT ###################### -->
+        <!-- Font Awesome icons (free version)-->
+        <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" defer></script>
+        <!-- Bootstrap core JS-->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" defer></script>
+        <!-- Core theme JS-->
+        <script src="assets/js/script.js" defer></script>
 </body>
 
 </html>
