--- a/index.html
+++ b/index.html
@@ -112,8 +112,7 @@
                 <div class="row">
                     <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3">
                         <div class="card-flyer">
-                            <div class="text-box portfolio-item mx-auto" data-bs-toggle="modal"
-                                data-bs-target="#portfolioModal1">
+                            <div class="text-box portfolio-item mx-auto">
                                 <div class="image-box">
 
                                     <img src="assets/img/portfolio/foodtrocs.svg" alt="" />
@@ -148,8 +147,7 @@
                     </div>
                     <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3">
                         <div class="card-flyer">
-                            <div class="text-box portfolio-item mx-auto" data-bs-toggle="modal"
-                                data-bs-target="#portfolioModal2">
+                            <div class="text-box portfolio-item mx-auto">
                                 <div class="image-box">
 
                                     <img src="assets/img/portfolio/loto.svg" alt="" />
@@ -179,8 +177,7 @@
                     </div>
                     <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3">
                         <div class="card-flyer">
-                            <div class="text-box portfolio-item mx-auto" data-bs-toggle="modal"
-                                data-bs-target="#portfolioModal3">
+                            <div class="text-box portfolio-item mx-auto">
                                 <div class="image-box">
 
                                     <img src="assets/img/portfolio/tresor.svg" alt="" />
@@ -216,8 +213,7 @@
                     </div>
                     <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3">
                         <div class="card-flyer">
-                            <div class="text-box portfolio-item mx-auto" data-bs-toggle="modal"
-                                data-bs-target="#portfolioModal4">
+                            <div class="text-box portfolio-item mx-auto">
                                 <div class="image-box">
 
                                     <img src="assets/img/portfolio/sautheuhz.svg" alt="" />
@@ -257,8 +253,7 @@
 
                     <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3">
                         <div class="card-flyer">
-                            <div class="text-box portfolio-item mx-auto" data-bs-toggle="modal"
-                                data-bs-target="#portfolioModal5">
+                            <div class="text-box portfolio-item mx-auto">
                                 <div class="image-box">
 
                                     <img src="assets/img/portfolio/nuitinfo.svg" alt="" />
@@ -294,8 +289,7 @@
                     </div>
                     <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3">
                         <div class="card-flyer">
-                            <div class="text-box portfolio-item mx-auto" data-bs-toggle="modal"
-                                data-bs-target="#portfolioModal6">
+                            <div class="text-box portfolio-item mx-auto" >
                                 <div class="image-box">
 
                                     <img src="assets/img/portfolio/nvo.svg" alt="" />
@@ -328,8 +322,7 @@
                     </div>
                     <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3">
                         <div class="card-flyer">
-                            <div class="text-box portfolio-item mx-auto" data-bs-toggle="modal"
-                                data-bs-target="#portfolioModal7">
+                            <div class="text-box portfolio-item mx-auto" >
                                 <div class="image-box">
 
                                     <img src="assets/img/portfolio/asimov.svg" alt="" />
@@ -368,8 +361,7 @@
                     </div>
                     <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3">
                         <div class="card-flyer">
-                            <div class="text-box portfolio-item mx-auto" data-bs-toggle="modal"
-                                data-bs-target="#portfolioModal8">
+                            <div class="text-box portfolio-item mx-auto" >
                                 <div class="image-box">
 
                                     <img src="assets/img/portfolio/epoka.svg" alt="" />
