--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
     <div class="cursor"></div>
     <div class="cursor2"></div>
 
-
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg text-uppercase fixed-top bg-white" id="mainNav">
         <div class="container">
@@ -60,10 +59,7 @@
                 <div class="col-lg-6">
                     <h1 class="display-5 fw-bold lh-1 mb-3">Bienvenue,<br> je suis <span class="text-primary">Sefa
                             GUCLU</span></h1>
-                    <p class="lead mt-4 hero-text">Quickly design and customize responsive mobile-first sites with
-                        Bootstrap, the
-                        world’s most popular front-end open source toolkit, featuring Sass variables and mixins,
-                        responsive grid system, extensive prebuilt components, and powerful JavaScript plugins.</p>
+                    <p class="lead mt-4 hero-text">Développeur Fullstack, je crée des solutions logicielles innovantes et ergonomiques. Quand je ne code pas, je voyage tout autour du monde.</p>
                     <div class="  gap-2 d-md-flex justify-content-md-start mt-4">
                         <a href="https://www.linkedin.com/in/sefaguclu/" target="_blank" style="text-decoration: none;">
                             <button type="button" class="btn btn-outline-secondary btn-lg px-4">
@@ -113,7 +109,7 @@
                     <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3">
                         <div class="card-flyer">
                             <div class="text-box portfolio-item mx-auto">
-                                <div class="image-box">
+                                <div class="image-box" onclick='window.open("https://foodtrocs.go.yj.fr/accueil.php")'>
 
                                     <img src="assets/img/portfolio/foodtrocs.svg" alt="" />
                                 </div>
@@ -148,7 +144,8 @@
                     <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3">
                         <div class="card-flyer">
                             <div class="text-box portfolio-item mx-auto">
-                                <div class="image-box">
+                                <div class="image-box"
+                                    onclick='window.open("https://sefacile.alwaysdata.net/loto/index.html")'>
 
                                     <img src="assets/img/portfolio/loto.svg" alt="" />
                                 </div>
@@ -178,7 +175,8 @@
                     <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3">
                         <div class="card-flyer">
                             <div class="text-box portfolio-item mx-auto">
-                                <div class="image-box">
+                                <div class="image-box"
+                                    onclick='window.open("https://sefacile.alwaysdata.net/chasseAuTresor/index.php")'>
 
                                     <img src="assets/img/portfolio/tresor.svg" alt="" />
                                 </div>
@@ -214,7 +212,8 @@
                     <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3">
                         <div class="card-flyer">
                             <div class="text-box portfolio-item mx-auto">
-                                <div class="image-box">
+                                <div class="image-box"
+                                    onclick='window.open("https://sautheuhz.alwaysdata.net/sautheuhz")'>
 
                                     <img src="assets/img/portfolio/sautheuhz.svg" alt="" />
                                 </div>
@@ -254,7 +253,7 @@
                     <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3">
                         <div class="card-flyer">
                             <div class="text-box portfolio-item mx-auto">
-                                <div class="image-box">
+                                <div class="image-box" onclick='window.open("https://nuitinfo.alwaysdata.net/")'>
 
                                     <img src="assets/img/portfolio/nuitinfo.svg" alt="" />
                                 </div>
@@ -289,8 +288,8 @@
                     </div>
                     <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3">
                         <div class="card-flyer">
-                            <div class="text-box portfolio-item mx-auto" >
-                                <div class="image-box">
+                            <div class="text-box portfolio-item mx-auto">
+                                <div class="image-box" onclick='window.open("https://github.com/guclusefa/nvo")'>
 
                                     <img src="assets/img/portfolio/nvo.svg" alt="" />
                                 </div>
@@ -322,8 +321,8 @@
                     </div>
                     <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3">
                         <div class="card-flyer">
-                            <div class="text-box portfolio-item mx-auto" >
-                                <div class="image-box">
+                            <div class="text-box portfolio-item mx-auto">
+                                <div class="image-box" onclick='window.open("https://asimov.alwaysdata.net/")'>
 
                                     <img src="assets/img/portfolio/asimov.svg" alt="" />
                                 </div>
@@ -361,8 +360,8 @@
                     </div>
                     <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3">
                         <div class="card-flyer">
-                            <div class="text-box portfolio-item mx-auto" >
-                                <div class="image-box">
+                            <div class="text-box portfolio-item mx-auto">
+                                <div class="image-box" onclick='window.open("https://epoka.alwaysdata.net/")'>
 
                                     <img src="assets/img/portfolio/epoka.svg" alt="" />
                                 </div>
@@ -418,7 +417,7 @@
                                     <p class="timeline-title">
                                         <span class="display-6 text-mfr">MFR</span><br>
                                         <small class="text-muted">France, Saint-Egrève</small><br>
-                                        <small class="text-muted">3 juin </small><br>
+                                        <small class="text-muted">31 mai - 2 juillet 2021</small><br>
                                     </p>
                                 </div>
                                 <div class="col-6">
@@ -711,7 +710,7 @@
                                     <p class="timeline-title">
                                         <span class="display-6 text-timc">TIMC-LAB (BCM)</span><br>
                                         <small class="text-muted">France, La Tronche</small><br>
-                                        <small class="text-muted">3 juin </small><br>
+                                        <small class="text-muted">3 janvier - 2 février 2022 </small><br>
                                     </p>
                                 </div>
                                 <div class="col-6">
@@ -1616,14 +1615,15 @@
                 </div>
             </div>
         </div>
+    </div>
 
-        <!-- ################## SCRIPT ###################### -->
-        <!-- Font Awesome icons (free version)-->
-        <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" defer></script>
-        <!-- Bootstrap core JS-->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" defer></script>
-        <!-- Core theme JS-->
-        <script src="assets/js/script.js" defer></script>
+    <!-- ################## SCRIPT ###################### -->
+    <!-- Font Awesome icons (free version)-->
+    <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" defer></script>
+    <!-- Bootstrap core JS-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" defer></script>
+    <!-- Core theme JS-->
+    <script src="assets/js/script.js" defer></script>
 </body>
 
 </html>
