--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="fr">
 
 <head>
@@ -19,9 +19,6 @@
 </head>
 
 <body id="page-top">
-    <div class="cursor"></div>
-    <div class="cursor2"></div>
-
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg text-uppercase fixed-top bg-white" id="mainNav">
         <div class="container">
@@ -58,7 +55,8 @@
                 <div class="col-lg-6">
                     <h1 class="display-5 fw-bold lh-1 mb-3">Bienvenue,<br> je suis <span class="text-primary">Sefa
                             GUCLU</span></h1>
-                    <p class="lead mt-4 hero-text">Développeur Fullstack, je crée des solutions logicielles innovantes et ergonomiques. Quand je ne code pas, je voyage tout autour du monde.</p>
+                    <p class="lead mt-4 hero-text">Développeur Fullstack, je crée des solutions logicielles innovantes
+                        et ergonomiques. Quand je ne code pas, je voyage tout autour du monde.</p>
                     <div class="  gap-2 d-md-flex justify-content-md-start mt-4">
                         <a href="https://www.linkedin.com/in/sefaguclu/" target="_blank" style="text-decoration: none;">
                             <button type="button" class="btn btn-outline-secondary btn-lg px-4">
@@ -1615,6 +1613,11 @@
             </div>
         </div>
     </div>
+
+    <!-- CURSORS -->
+    <div class="cursor"></div>
+    <div class="cursor2"></div>
+
 
     <!-- ################## SCRIPT ###################### -->
     <!-- Font Awesome icons (free version)-->
