--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
                                             class="ms-2 text-black"><i class="fa-brands fa-git-alt me-1"></i>git</a>
                                     </p>
                                     <hr>
-                                    <p>Application web de géstion, également disponible en logiciel gràce à une API
+                                    <p>Application web de gestion, également disponible en logiciel gràce à une API
                                         REST, permettant de gérer les differents acteurs d'un collège-lycée.
                                         <br><br>
                                         Réalisé dans le cadre de l'épreuve E5 du BTS SIO.
@@ -373,7 +373,7 @@
                                             class="ms-2 text-black"><i class="fa-brands fa-git-alt me-1"></i>git</a>
                                     </p>
                                     <hr>
-                                    <p>Application de géstion de salariés d'une PME, disponible en web et mobile.
+                                    <p>Application de gestion de salariés d'une PME, disponible en web et mobile.
                                         <br><br>
                                         Réalisé dans le cadre de l'épreuve E5 du BTS SIO.
                                     </p>
