--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@
                                     </p>
                                     <hr>
                                     <p>Site type marketplace où les utilisateurs peuvent vendre leurs repas aux des
-                                        personnes de leurs alentours.
-                                        <br><br> Projet personnel, réalisé à but pédagoqiues, afin d'apprendre les
+                                        personnes de leurs alentour.
+                                        <br><br> Projet personnel, réalisé à but pédagogique, afin d'apprendre les
                                         basiques de la
                                         programmation.
                                     </p>
@@ -190,7 +190,7 @@
                                     </p>
                                     <hr>
                                     <p>Jeu de chasse au trésor, capable d'inscrire les joueurs dans une base de données
-                                        ainsi que de les classer selon leurs résultats.
+                                        ainsi que de les classifier en fonction de leurs résultats.
                                         <br><br>
                                         Réalisé dans le cadre de ma 1ère année de BTS SIO option SLAM, dans le but
                                         d'apprendre les bases la programmation orientée objet.
@@ -226,11 +226,10 @@
                                     </p>
                                     <hr>
                                     <p>Application web permettant à une pharmacie et ses employés de gerer ses clients,
-                                        ordonnances et stocks de manières aussi simple qu'intuitive
+                                        ordonnances et stocks de manières aussi simple qu'intuitive.
                                         <br><br>
                                         Réalisé en binôme, dans le cadre de ma 1ère année de BTS SIO option SLAM, afin
-                                        d'apprendre la mise en place d'une API RESTful ainsi l'architecture MVC sous un
-                                        framework NodeJS.
+                                        d'apprendre la mise en place d'une API RESTful sous une architecture MVC.
                                     </p>
                                     <hr>
                                     <p>
@@ -442,7 +441,7 @@
                     <div class="timeline-badge bg-mfr"><i class="fa-solid fa-1"></i></div>
                     <div class="timeline-panel">
                         <div class="timeline-heading">
-                            <h4 class="timeline-title">Analyse des besoins utilisateur et du cahier des cherges</h4>
+                            <h4 class="timeline-title">Analyse des besoins utilisateur et du cahier des charges</h4>
                             <p><small class="text-muted">Jour 1</small></p>
                         </div>
                         <div class="timeline-body">
@@ -475,7 +474,8 @@
                                 demandes ainsi que répertorier les sites internet des différents établissements)
                             </p>
                             <p>
-                                J’ai fait la conclusion que la meilleure solution était pour moi, de faire un site en
+                                J’ai fait la conclusion que la meilleure solution était pour moi, de faire une
+                                application web en
                                 php,
                                 hébergé localement. Étant donné que j’ai de l’expérience dans la création de sites en
                                 Php,
@@ -506,7 +506,7 @@
                                         class="fa-solid fa-database me-2"></i> MLD</button>
                                 <button data-bs-toggle="modal" data-bs-target="#portfolioModal10"
                                     class="btn btn-outline-secondary btn-lg px-4 mt-1"><i
-                                        class="fa-solid fa-folder-tree me-2"></i> Arboresence</button>
+                                        class="fa-solid fa-folder-tree me-2"></i> Arborescence</button>
                             </div>
                         </div>
                     </div>
@@ -547,7 +547,7 @@
                             <p><small class="text-muted">Semaine 5</small></p>
                         </div>
                         <div class="timeline-body">
-                            <p>En fin de semaine, j’ai migré les bases de données IMFR (depuis 2010) ainsi que que la
+                            <p>En fin de semaine, j’ai migré les bases de données IMFR (depuis 2010) ainsi que la
                                 base de données du fichier Excel de madame MARTIN vers la nouvelle BDD.
                             </p>
                             <p>
@@ -571,7 +571,7 @@
                     <div class="timeline-badge bg-mfr"><i class="fa-solid fa-5"></i></div>
                     <div class="timeline-panel">
                         <div class="timeline-heading">
-                            <h4 class="timeline-title">Déploiement de l'applcation</h4>
+                            <h4 class="timeline-title">Déploiement de l'application</h4>
                             <p><small class="text-muted">Semaine 5</small></p>
 
                         </div>
@@ -579,7 +579,7 @@
                             <p>Configuration d'un serveur Web APACHE, accessible sur le serveur de la MFR afin de rendre
                                 l'application disponible à tous.</p>
                             <div class="gap-2 justify-content-md-start mt-3">
-                                <a href="https://sefacile.alwaysdata.net/MFR_BDD/index.php" target="_blank"> <button
+                                <a href="https://mfr.alwaysdata.net/" target="_blank"> <button
                                         type="button" class="btn btn-outline-secondary btn-lg px-4 mt-1"><i
                                             class="fa-solid fa-laptop-code me-2"></i> Démo</button></a>
                                 <!-- 
@@ -611,7 +611,7 @@
 
                             </p>
                             <div class="gap-2 justify-content-md-start mt-3">
-                                <a href="https://sefacile.alwaysdata.net/MFR_BDD/guide.php" target="_blank"> <button
+                                <a href="https://mfr.alwaysdata.net/guide.php" target="_blank"> <button
                                         type="button" class="btn btn-outline-secondary btn-lg px-4 mt-1"><i
                                             class="fa-solid fa-book me-2"></i> Guide d'utilisation</button></a>
 
@@ -645,20 +645,9 @@
                                 Je pars donc de ce stage très satisfait et avec un projet d’avenir plus concrétisé. En
                                 effet
                                 le poste de développeur full-stack est un poste qui ne m’attire encore moins ; mal-grès
-                                que je n’ai pas vraiment eu de problème avec la programma frontend durant ce stage, je
+                                que je n’ai pas vraiment eu de problème avec la programmation frontend durant ce stage, je
                                 suis plus épanoui et je ressens plus de satisfaction dans mon travail quand il s’agit de
                                 programmation backend.</p>
-                            <p>Fort de cette expérience et en réponse à ces enjeux, j’aimerais beaucoup par la suite,
-                                essayer de m’orienter vers un prochain stage, avec des moyens techniques plus avancés,
-                                et une compensation pédagogique car, en effet, je n’ai pas réellement appris grand-chose
-                                (techniquement parlant) durant les 5 semaines de ce stage, dû au fait que je n’avais pas
-                                de tuteur technique.
-                            </p>
-                            <p>
-                                En contrepartie, le fait d’être en autonomie quasi total m’a permis d’avoir un premier
-                                aperçu du développement free-lance ; un secteur dans laquelle je pourrais peut-être
-                                mener une carrière dans le futur.
-                            </p>
                             <hr>
                             <div class="gap-2 justify-content-md-start">
                                 <h5>Soft skills</h5>
@@ -815,8 +804,7 @@
                             <p><small class="text-muted">Semaine 2 - Semaine 4</small></p>
                         </div>
                         <div class="timeline-body">
-                            <p>Pour l’interprétation graphique, nous avons était conseillé d’utiliser Plotely
-                                (https://plotly.com/) qui est une bibliothèque open source qui fournit une liste de
+                            <p>Pour l’interprétation graphique, nous avons était conseillé d’utiliser Plotely (<a href="https://plotly.com/">https://plotly.com</a>) qui est une bibliothèque open source qui fournit une liste de
                                 types de
                                 graphiques. Dans notre cas, les chercheurs sont intéressés par les graphiques de type
                                 «heatmap» pour l’interprétation de données de ces simulations.
@@ -892,11 +880,8 @@
                             <p>
                                 Nous avons donc décidé de chercher dans un autre langage qui nous est bien familier:
                                 JavaScript. Après recherches, nous avons trouvé InteractJS.
-                                InteractJS (https://interactjs.io/) est une librairie JavaScript, gratuit et open
-                                source, qui permet de rendre une interface interactive.
-                                Ayant désormais appris les bases de cette librairie nous allons commencer le
-                                développement de notre projet la semaine prochaine.</p>
-
+                                InteractJS (<a href="https://interactjs.io/">https://interactjs.io/</a>) est une librairie JavaScript, gratuit et open
+                                source, qui permet de rendre une interface interactive.</p>
                         </div>
                     </div>
                 </li>
