--- a/index.html
+++ b/index.html
@@ -55,8 +55,7 @@
                 <div class="col-lg-6">
                     <h1 class="display-5 fw-bold lh-1 mb-3">Bienvenue,<br> je suis <span class="text-primary">Sefa
                             GUCLU</span></h1>
-                    <p class="lead mt-4 hero-text">Développeur Fullstack, je crée des solutions logicielles innovantes
-                        et ergonomiques. Quand je ne code pas, je voyage tout autour du monde.</p>
+                    <p class="lead mt-4 hero-text">Actuellement étudiant en BTS Services Informatiques aux Organisations (SIO) option Solutions Logicielles et Applications Métier (SLAM), j’ai le projet de mener une carrière dans le développement informatique. </p>
                     <div class="  gap-2 d-md-flex justify-content-md-start mt-4">
                         <a href="https://www.linkedin.com/in/sefaguclu/" target="_blank" style="text-decoration: none;">
                             <button type="button" class="btn btn-outline-secondary btn-lg px-4">
@@ -106,21 +105,14 @@
                     <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3">
                         <div class="card-flyer">
                             <div class="text-box portfolio-item mx-auto">
-                                <div class="image-box" onclick='window.open("https://foodtrocs.go.yj.fr/accueil.php")'>
-
-                                    <img src="assets/img/portfolio/foodtrocs.svg" alt="" />
+                                <div class="image-box">
+                                    <img src="assets/img/portfolio/foodtrocs.svg" alt="" /> 
                                 </div>
                                 <div class="text-container">
                                     <h6 class="text-foodtrocs">FoodTrocs</h6>
                                     <figcaption class="figure-caption">Septrembre 2020</figcaption>
                                     <hr>
-                                    <p>
-                                        <a href="https://foodtrocs.go.yj.fr/accueil.php" target="_blank"><i
-                                                class="fa-solid fa-link me-1"></i>foodtrocs.go.yj.fr</a>
-                                        <a href="https://github.com/guclusefa/foodtrocs" target="_blank"
-                                            class="ms-2 text-black"><i class="fa-brands fa-git-alt me-1"></i>git</a>
-                                    </p>
-                                    <hr>
+ 
                                     <p>Site type marketplace où les utilisateurs peuvent vendre leurs repas aux des
                                         personnes de leurs alentour.
                                         <br><br> Projet personnel, réalisé à but pédagogique, afin d'apprendre les
@@ -185,8 +177,7 @@
                                         <a href="https://sefacile.alwaysdata.net/chasseAuTresor/index.php"
                                             target="_blank"><i
                                                 class="fa-solid fa-link me-1"></i>tresor.alwaysdata.net</a>
-                                        <a href="https://github.com/guclusefa/treasure-hunt" target="_blank"
-                                            class="ms-2 text-black"><i class="fa-brands fa-git-alt me-1"></i>git</a>
+ 
                                     </p>
                                     <hr>
                                     <p>Jeu de chasse au trésor, capable d'inscrire les joueurs dans une base de données
@@ -641,13 +632,7 @@
                                 pouvoir
                                 leur permettre de travailler de façon plus efficace et qui va être réellement utilisé.
                             </p>
-                            <p>
-                                Je pars donc de ce stage très satisfait et avec un projet d’avenir plus concrétisé. En
-                                effet
-                                le poste de développeur full-stack est un poste qui ne m’attire encore moins ; mal-grès
-                                que je n’ai pas vraiment eu de problème avec la programmation frontend durant ce stage, je
-                                suis plus épanoui et je ressens plus de satisfaction dans mon travail quand il s’agit de
-                                programmation backend.</p>
+ 
                             <hr>
                             <div class="gap-2 justify-content-md-start">
                                 <h5>Soft skills</h5>
