--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                                     <figcaption class="figure-caption">Septrembre 2020</figcaption>
                                     <hr>
  
-                                    <p>Site type marketplace où les utilisateurs peuvent vendre leurs repas aux des
+                                    <p>Site type marketplace où les utilisateurs peuvent vendre leurs repas à des
                                         personnes de leurs alentour.
                                         <br><br> Projet personnel, réalisé à but pédagogique, afin d'apprendre les
                                         basiques de la
@@ -216,7 +216,7 @@
                                             class="ms-2 text-black"><i class="fa-brands fa-git-alt me-1"></i>git</a>
                                     </p>
                                     <hr>
-                                    <p>Application web permettant à une pharmacie et ses employés de gerer ses clients,
+                                    <p>Application web permettant à une pharmacie et ses employés de gérer ses clients,
                                         ordonnances et stocks de manières aussi simple qu'intuitive.
                                         <br><br>
                                         Réalisé en binôme, dans le cadre de ma 1ère année de BTS SIO option SLAM, afin
@@ -324,7 +324,7 @@
                                             class="ms-2 text-black"><i class="fa-brands fa-git-alt me-1"></i>git</a>
                                     </p>
                                     <hr>
-                                    <p>Application web de gestion, également disponible en logiciel gràce à une API
+                                    <p>Application web de gestion, également disponible en logiciel grâce à une API
                                         REST, permettant de gérer les differents acteurs d'un collège-lycée.
                                         <br><br>
                                         Réalisé dans le cadre de l'épreuve E5 du BTS SIO.
@@ -467,9 +467,9 @@
                             <p>
                                 J’ai fait la conclusion que la meilleure solution était pour moi, de faire une
                                 application web en
-                                php,
+                                PHP,
                                 hébergé localement. Étant donné que j’ai de l’expérience dans la création de sites en
-                                Php,
+                                PHP,
                                 c’était pour moi la meilleure manière d’attaquer cette problématique.
                             </p>
                         </div>
@@ -750,7 +750,7 @@
                         </div>
                         <div class="timeline-body">
                             <p>Afin de concevoir cette interface graphique nous avons opté pour C#, plutot que QT (la
-                                propistion de notre tutrice) car cela permet de
+                                suggestion de notre tutrice) car cela permet de
                                 créer un exécutable qui est facilement transmissible entre les chercheurs.
                             </p>
 
@@ -905,7 +905,7 @@
                                 anglais afin de le rendre accessible à toute l'équipe. Finalement, nous avons compilé le
                                 code afin de le rendre facilement transmissible au sein de l'équipe.</p>
                             <div class="gap-2 justify-content-md-start mt-3">
-                                <a href="https://www.transfernow.net/dl/pancreas-artificial" target="_blank">
+                                <a href="https://transfert.free.fr/8j29Gp" target="_blank">
                                     <button type="button" class="btn btn-outline-secondary btn-lg px-4 mt-1"><i
                                             class="fa-solid fa-laptop-code me-2"></i> Démo</button>
                                 </a>
